# coveo-mcp-server

./: .env.example  .gitignore  Dockerfile  README.md  index.html  pyproject.toml  run_tests.sh  test_transports.py
src/coveo_mcp_server/: __main__.py  coveo_api.py  server.py
tests/unit/: test_coveo_api.py  test_server.py
