[project]
name = "coveo-mcp-server"
version = "0.1.0"
description = "A simple MCP server integrating with Coveo"
authors = [
    { name = "Louis-Guillaume Carrier-Bédard", email = "lgcarrier@coveo.com" },
    { name = "Keith Beaudoin", email = "kbeaudoin@coveo.com" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.15.0",
    "requests >=2.31.0",
    "fastapi >=0.110.0",
    "uvicorn >=0.29.0",
    "httpx >=0.27.0",
    "python-dotenv >=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest >=7.4.0",
    "pytest-asyncio >=0.21.1",
    "pytest-cov >=4.1.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/coveo_mcp_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"
